--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "vue2-sdk",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "files": ["dist"],
+  "main": "./dist/my-lib.umd.cjs",
+  "module": "./dist/my-lib.js",
+  "exports": {
+    ".": {
+      "import": "./dist/my-lib.js",
+      "require": "./dist/my-lib.umd.cjs"
+    }
+  },
   "scripts": {
+    "dev": "vite",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "vite": "^3.0.2",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,6 +31,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vite-plugin-vue2": "^2.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
