--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vite": "^3.0.2",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "sdk-test": "git+ssh://git@github.com:AnselRain/sdk-test.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
